<resources>
    <string name="app_name">8th Mile 2017</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!--  All the items in the nav bar-->
    <string name="nav_home">Home</string>
    <string name="nav_events">Events</string>
    <string name="nav_sponsers">Sponsors</string>
    <string name="nav_hospitality">Hospitality</string>
    <string name="nav_contact">Contact Us</string>
    <string name="nav_tour">Schedule</string>
    <string name="nav_my_events">My Events</string>
    <string name="nav_wishlist">Wish List</string>
    <string name="nav_logout">Logout</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Events</item>
        <item>My Events</item>
        <item>Wish List</item>
        <item>Contact Us</item>
        <item>Sponsors</item>
        <item>Hospitality</item>
        <item>Schedule</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
